# takuzu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game_sdl.c  game_sdl.h  game_solve.c  game_text.c
src/: game.c  game.h  game_aux.c  game_ext.c  game_private.c  game_private.h  game_struct.h  game_tools.c  game_tools.h
unit-tests/: game_test_ctinnes.c  game_test_ext.c  game_test_hubernard.c  game_test_mrouves.c
web/: game.js  game.wasm  index.html  script.js  style.css  wrapper.c
